--- a/pedido/src/main/resources/application.yml
+++ b/pedido/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: 'restaurante'
+    name: 'pedido'
   datasource:
     password: root
     username: root
@@ -19,3 +19,8 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+security:
+  oauth2:
+    resource:
+      user-info-uri: http://localhost:8088/user
